--- a/layout/app/index.html
+++ b/layout/app/index.html
@@ -31,7 +31,8 @@
 		<div class="container">
 			<h1>Список страниц:</h1>
 			<ul>
-				<li><a href="/main.html">Главная</a></li>
+				<li><a href="main.html">Главная</a></li>
+				<li><a href="production.html">Производство</a></li>
 			</ul>
 		</div>
 	</div>
