--- a/layout/app/pages/main.html
+++ b/layout/app/pages/main.html
@@ -14,11 +14,10 @@
 			<div class="container">
 				<div class="top-block-inner grid">
 					<div class="text-block">
-						<div class="title">Предлагаем услуги по разработке:</div>
+						<div class="title"><h1>Наши услуги</h1></div>
 						<div class="list">
 							<ul>
-								<li>электронных устройств;</li>
-								<li>встраиваемых систем;</li>
+								<li>разработка электронных устройств и встраиваемых систем;</li>
 								<li>контрактное производство электроники.</li>
 							</ul>
 						</div>
