--- a/layout/app/production.html
+++ b/layout/app/production.html
@@ -55,34 +55,85 @@
 		</div>
 	</div>
 </header>
-	<main class="main-page">
+	<main class="inner-page production-page">
 		<section class="top-block">
 			<div class="container">
 				<div class="top-block-inner grid">
 					<div class="text-block">
-						<div class="title"><h1>Наши услуги</h1></div>
+						<div class="title"><h1>Производство электроники</h1></div>
 						<div class="list">
 							<ul>
-								<li>разработка электронных устройств и встраиваемых систем;</li>
-								<li>контрактное производство электроники.</li>
+								<li>Изготовление печатных плат от 3 до 5 класса точности;</li>
+								<li>Возможность срочного изготовления;</li>
+								<li>Собственное производство;</li>
+								<li>Поверхностный (SMT/SMD) и выводной (THT) монтаж <br>электронных компонентов от одной платы<br> до крупной серии</li>
 							</ul>
 						</div>
-						<div class="btn-block"><a href="#" class="btn">Разработка электроники</a><a href="#" class="btn">Производство электроники</a></div>
 					</div>
-					<div class="img"><img src="img/dest/top-img.png" alt=""></div>
+					<div class="img"><img src="img/dest/production-top-img.png" alt=""></div>
 				</div>
 			</div>
 		</section>
-		<section class="slogan-block">
+		<div class="section calculator">
 			<div class="container">
-				<div class="text-block">
+				<div class="grid">
 					<div class="title">
-						<h3>Наш принцип:</h3>
+						<h3>Для предварительного расчета воспользуйтесь калькулятором</h3>
 					</div>
-					<div class="text">Ваша идея - наша реализация</div>
+					<div class="form-block calc-form">
+						<form action="/" method="post">
+							<div class="form-inner">
+								<div class="form-field">
+									<div class="caption">Количество точек пайки поверхностного монтажа (SMD)</div>
+									<input type="number" placeholder="Количество точек пайки поверхностного монтажа (SMD)">
+								</div>
+								<div class="form-field">
+									<div class="caption">Количество точек пайки выводного монтажа (ТНТ)</div>
+									<input type="number" placeholder="Количество точек пайки выводного монтажа (ТНТ)">
+								</div>
+								<div class="select-field">
+									<div class="caption">Наличие трафарета</div>
+									<div class="select">
+										<div class="current">Наличие трафарета</div>
+										<div class="list">
+											<a href="#" class="option">С трафаретом</a>
+											<a href="#" class="option">Без трафарета</a>
+										</div>
+									</div>
+								</div>
+								<div class="select-field">
+									<div class="caption">Электронные компоненты</div>
+									<div class="select">
+										<div class="current">Электронные компоненты</div>
+										<div class="list">
+											<a href="#" class="option">Заказчика</a>
+											<a href="#" class="option">Исполнителя</a>
+										</div>
+									</div>
+								</div>
+								<div class="select-field">
+									<div class="caption">Количество плат для монтажа</div>
+									<div class="select">
+										<div class="current">Количество плат для монтажа</div>
+										<div class="list">
+											<a href="#" class="option">1..9</a>
+											<a href="#" class="option">10..49</a>
+											<a href="#" class="option">50..99</a>
+											<a href="#" class="option">100..</a>
+										</div>
+									</div>
+								</div>
+								<div class="result-block">
+									<div class="caption">Стоимость мотажа одной платы</div>
+									<div class="val"><span>0</span> ₽</div>
+								</div>
+								<div class="text"><span>*</span>Расчет является предварительным и не является Договором публичной оферты. Окончательную цену мы можем сказать после получения документации на изделие и обработки нашими специалистами</div>
+							</div>
+						</form>
+					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<section class="contacts-form">
 	<div class="container">
 		<div class="grid">
@@ -192,20 +243,6 @@
 			<h3>Спасибо!</h3>
 			<div class="text">Ваша заявка успешно отправлена. <br>Мы свяжемся с Вами в ближайшее время.</div>
 		</div>
-	</div>
-</div>
-	<div class="cookies">
-	<div class="close">
-		<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-			<path d="M2 2L14 14M2 14L14 2" stroke="#A7A7A7" stroke-width="1.5" stroke-linecap="square" stroke-linejoin="round"/>
-		</svg>
-	</div>
-	<div class="text-block">
-		<div class="title">
-			<h4>Мы используем cookie</h4>
-		</div>
-		<div class="text">Используя сайт, вы соглашаетесь на обработку данных в Cookies для корректной работы сайта, вашей персонализации и других целей, предусмотренных Политикой.</div>
-		<div class="btn-block"><a href="#" class="btn ok-btn">Принимаю</a></div>
 	</div>
 </div>
 	<div class="popupmenu">
