--- a/layout/app/pages/main.html
+++ b/layout/app/pages/main.html
@@ -37,7 +37,20 @@
 				</div>
 			</div>
 		</section>
-		@@include('../html/contacts-form.html')
+		<section class="contacts-form">
+			<div class="container">
+				<div class="grid">
+					<div class="title">
+						<h3>Свяжитесь с нами</h3>
+					</div>
+					@@include('../html/contacts-form.html')
+				</div>
+			</div>
+			<div class="file-error">
+				<div class="name">Реквизиты_ИП_Иванов_Иван_Иванович.docx </div>
+				<div class="error-text">Файл слишком большой</div>
+			</div>
+		</section>
 	</main>
 	@@include('../html/footer.html')
 	@@include('../html/thanx-popup.html')
