--- a/layout/app/pages/production.html
+++ b/layout/app/pages/production.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 		</section>
-		<div class="section calculator">
+		<section class="calculator">
 			<div class="container">
 				<div class="grid">
 					<div class="title">
@@ -39,43 +39,46 @@
 							<div class="form-inner">
 								<div class="form-field">
 									<div class="caption">Количество точек пайки поверхностного монтажа (SMD)</div>
-									<input type="number" placeholder="Количество точек пайки поверхностного монтажа (SMD)">
+									<input type="number" class="indot" placeholder="Количество точек пайки поверхностного монтажа (SMD)">
 								</div>
 								<div class="form-field">
 									<div class="caption">Количество точек пайки выводного монтажа (ТНТ)</div>
-									<input type="number" placeholder="Количество точек пайки выводного монтажа (ТНТ)">
+									<input type="number" class="outdot" placeholder="Количество точек пайки выводного монтажа (ТНТ)">
 								</div>
 								<div class="select-field">
 									<div class="caption">Наличие трафарета</div>
 									<div class="select">
 										<div class="current">Наличие трафарета</div>
 										<div class="list">
-											<a href="#" class="option">С трафаретом</a>
-											<a href="#" class="option">Без трафарета</a>
+											<a href="#" class="option trafaret" data-valIn="10" data-valOut="12">С трафаретом</a>
+											<a href="#" class="option trafaret" data-valIn="5" data-valOut="7">Без трафарета</a>
 										</div>
 									</div>
+									<input type="hidden" name="trafaret-sum">
 								</div>
 								<div class="select-field">
 									<div class="caption">Электронные компоненты</div>
 									<div class="select">
 										<div class="current">Электронные компоненты</div>
 										<div class="list">
-											<a href="#" class="option">Заказчика</a>
-											<a href="#" class="option">Исполнителя</a>
+											<a href="#" class="option component1 components" data-percent="20">Заказчика</a>
+											<a href="#" class="option component2 components" data-overprice="5" data-wash="100" data-percent="30">Исполнителя</a>
 										</div>
 									</div>
+									<input type="hidden" name="components-sum">
 								</div>
 								<div class="select-field">
 									<div class="caption">Количество плат для монтажа</div>
 									<div class="select">
 										<div class="current">Количество плат для монтажа</div>
 										<div class="list">
-											<a href="#" class="option">1..9</a>
-											<a href="#" class="option">10..49</a>
-											<a href="#" class="option">50..99</a>
-											<a href="#" class="option">100..</a>
+											<a href="#" class="option quantity" data-val="2">1..9</a>
+											<a href="#" class="option quantity" data-val="1.5">10..49</a>
+											<a href="#" class="option quantity" data-val="1.25">50..99</a>
+											<a href="#" class="option quantity" data-val="1">100..</a>
 										</div>
 									</div>
+									<input type="hidden" name="quantity-sum">
 								</div>
 								<div class="result-block">
 									<div class="caption">Стоимость мотажа одной платы</div>
@@ -87,8 +90,21 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		@@include('../html/contacts-form.html')
+		</section>
+		<section class="contacts-form">
+			<div class="container">
+				<div class="grid">
+					<div class="title">
+						<h3>Для получения окончательной цены свяжитесь с нами и приложите документацию</h3>
+					</div>
+					@@include('../html/contacts-form.html')
+				</div>
+			</div>
+			<div class="file-error">
+				<div class="name">Реквизиты_ИП_Иванов_Иван_Иванович.docx </div>
+				<div class="error-text">Файл слишком большой</div>
+			</div>
+		</section>
 	</main>
 	@@include('../html/footer.html')
 	@@include('../html/thanx-popup.html')
