--- a/layout/app/pages/index.html
+++ b/layout/app/pages/index.html
@@ -33,6 +33,7 @@
 			<ul>
 				<li><a href="main.html">Главная</a></li>
 				<li><a href="production.html">Производство</a></li>
+				<li><a href="catalog.html">Интернет-магазин</a></li>
 			</ul>
 		</div>
 	</div>
