recovery registration authorization

--- a/layout/app/index.html
+++ b/layout/app/index.html
@@ -34,6 +34,7 @@
 				<li><a href="main.html">Главная</a></li>
 				<li><a href="production.html">Производство</a></li>
 				<li><a href="catalog.html">Интернет-магазин</a></li>
+				<li><a href="forms.html">Авторизация, регистрация, восстановление</a></li>
 			</ul>
 		</div>
 	</div>
