recovery registration authorization

--- a/layout/app/forms.html
+++ b/layout/app/forms.html
@@ -168,12 +168,12 @@
 
                 <div class="tabs__type">
                     <div class="tabs__header">
-                        <div class="tabs__header-item " data-tab="1">Физическое лицо</div>
-                        <div class="tabs__header-item active" data-tab="2">Юридическое лицо</div>
+                        <div class="tabs__header-item active" data-tab="1">Физическое лицо</div>
+                        <div class="tabs__header-item" data-tab="2">Юридическое лицо</div>
                     </div>
 
                     <div class="tabs__body">
-                        <div class="tabs__body-item " data-tab="1">
+                        <div class="tabs__body-item active" data-tab="1">
                             <form action="">
                                 <input type="text" name="lastname" placeholder="Фамилия" required>  
                                 <input type="text" name="name" placeholder="Имя" required>  
@@ -203,7 +203,7 @@
 
                             </form>
                         </div>
-                        <div class="tabs__body-item active" data-tab="2">
+                        <div class="tabs__body-item" data-tab="2">
                             <form action="">
                                 <input type="text" name="lastname" placeholder="Фамилия" required>  
                                 <input type="text" name="name" placeholder="Имя" required>  
