--- a/layout/app/pages/index.html
+++ b/layout/app/pages/index.html
@@ -34,6 +34,9 @@
 				<li><a href="main.html">Главная</a></li>
 				<li><a href="production.html">Производство</a></li>
 				<li><a href="catalog.html">Интернет-магазин</a></li>
+				<li><a href="product-page.html">Деталка товара</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
+				<li><a href="cart.html">Корзина</a></li>
 			</ul>
 		</div>
 	</div>
