--- a/layout/app/product-page.html
+++ b/layout/app/product-page.html
@@ -55,84 +55,110 @@
 		</div>
 	</div>
 </header>
-	<main class="inner-page production-page">
-		<section class="top-block">
-			<div class="container">
-				<div class="top-block-inner grid">
-					<div class="text-block">
-						<div class="title"><h1>Производство электроники</h1></div>
-						<div class="list">
-							<ul>
-								<li>Изготовление печатных плат от 3 до 5 класса точности;</li>
-								<li>Возможность срочного изготовления;</li>
-								<li>Собственное производство;</li>
-								<li>Поверхностный (SMT/SMD) и выводной (THT) монтаж <br>электронных компонентов от одной платы<br> до крупной серии</li>
-							</ul>
-						</div>
-					</div>
-					<div class="img"><img src="img/dest/production-top-img.png" alt=""></div>
-				</div>
-			</div>
-		</section>
-		<section class="calculator">
+	<main class="inner-page product-page">
+		<section class="product">
 			<div class="container">
 				<div class="grid">
-					<div class="title">
-						<h3>Для предварительного расчета воспользуйтесь калькулятором</h3>
+					<div class="img-block">
+						<div class="img"><img src="img/dest/product-img.jpg" alt=""></div>
+						<div class="back">
+							<a href="#">
+								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M9 14L5 10L9 6" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+									<path d="M5 10H16C17.0609 10 18.0783 10.4214 18.8284 11.1716C19.5786 11.9217 20 12.9391 20 14C20 15.0609 19.5786 16.0783 18.8284 16.8284C18.0783 17.5786 17.0609 18 16 18H15" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+								</svg>
+								Вернуться в каталог
+							</a>
+						</div>
 					</div>
-					<div class="form-block calc-form">
-						<form action="/" method="post">
-							<div class="form-inner">
-								<div class="form-field">
-									<div class="caption">Количество точек пайки поверхностного монтажа (SMD)</div>
-									<input type="number" class="indot" placeholder="Количество точек пайки поверхностного монтажа (SMD)">
-								</div>
-								<div class="form-field">
-									<div class="caption">Количество точек пайки выводного монтажа (ТНТ)</div>
-									<input type="number" class="outdot" placeholder="Количество точек пайки выводного монтажа (ТНТ)">
-								</div>
-								<div class="select-field">
-									<div class="caption">Наличие трафарета</div>
-									<div class="select">
-										<div class="current">Наличие трафарета</div>
-										<div class="list">
-											<a href="#" class="option trafaret" data-valIn="1.25" data-valOut="2.8">С трафаретом</a>
-											<a href="#" class="option trafaret" data-valIn="1.65" data-valOut="2.8">Без трафарета</a>
-										</div>
-									</div>
-									<input type="hidden" name="trafaret-sum">
-								</div>
-								<div class="select-field">
-									<div class="caption">Электронные компоненты</div>
-									<div class="select">
-										<div class="current">Электронные компоненты</div>
-										<div class="list">
-											<a href="#" class="option component1 components" data-percent="10">Заказчика</a>
-											<a href="#" class="option component2 components" data-overprice="1.25" data-wash="46" data-percent="10">Исполнителя</a>
-										</div>
-									</div>
-									<input type="hidden" name="components-sum">
-								</div>
-								<div class="select-field">
-									<div class="caption">Количество плат для монтажа</div>
-									<div class="select">
-										<div class="current">Количество плат для монтажа</div>
-										<div class="list">
-											<a href="#" class="option quantity" data-val="2">1..9</a>
-											<a href="#" class="option quantity" data-val="1.5">10..49</a>
-											<a href="#" class="option quantity" data-val="1.25">50..99</a>
-											<a href="#" class="option quantity" data-val="1">100..</a>
-										</div>
-									</div>
-									<input type="hidden" name="quantity-sum">
-								</div>
-								<div class="result-block">
-									<div class="caption">Стоимость мотажа одной платы</div>
-									<div class="val"><span>0</span> ₽</div>
-								</div>
-								<div class="text"><span>*</span>Расчет является предварительным и не является Договором публичной оферты. Окончательную цену мы можем сказать после получения документации на изделие и обработки нашими специалистами</div>
+					<div class="text-block">
+						<div class="name">
+							<h1 class="h3">USB3.1 TYPE-C 24PF-014, Разъём USB, 24 контакта</h1>
+						</div>
+						<div class="cart-area">
+							<div class="price-block">
+								<div class="in-stock">В наличии: <span>9999</span></div>
+								<div class="price">48 ₽</div>
 							</div>
-						</form>
+							<div class="btn-block">
+								<div class="quantity-block">
+									<div class="sign minus">
+										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M19.001 12.998H5.00098V10.998H19.001V12.998Z" fill="white"/>
+										</svg>
+									</div>
+									<input type="text" class="number" value="1" class="quantity">
+									<div class="sign plus">
+										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M19 12.998H13V18.998H11V12.998H5V10.998H11V4.99805H13V10.998H19V12.998Z" fill="white"/>
+										</svg>
+									</div>
+								</div>
+								<a href="#" class="btn">Добавить в корзину</a>
+							</div>
+						</div>
+						<div class="characteristics">
+							<div class="item">
+								<div class="caption">Количество контактов:</div>
+								<div class="val">24</div>
+							</div>
+							<div class="item">
+								<div class="caption">Высота, мм:</div>
+								<div class="val">3.16(корпус)</div>
+							</div>
+							<div class="item">
+								<div class="caption">Глубина, мм:</div>
+								<div class="val">7.9</div>
+							</div>
+							<div class="item">
+								<div class="caption">Диапазон рабочих температур:</div>
+								<div class="val">°C -55…+85</div>
+							</div>
+							<div class="item">
+								<div class="caption">Диэлектрическая прочность, В:</div>
+								<div class="val">100</div>
+							</div>
+							<div class="item">
+								<div class="caption">Количество циклов коммутации (электро), не менее:</div>
+								<div class="val">10000 раз</div>
+							</div>
+							<div class="item">
+								<div class="caption">Контактное сопротивление, мОм, не более:</div>
+								<div class="val">40</div>
+							</div>
+							<div class="item material-item">
+								<div class="caption">Материал:</div>
+								<div class="val">корпус-нержавеющая сталь; <br>изолятор-LCP UL94V-0; <br>контакты-Cu-сплав с покрытием </div>
+							</div>
+							<div class="item">
+								<div class="caption">Номинальное напряжение, В:</div>
+								<div class="val">5</div>
+							</div>
+							<div class="item">
+								<div class="caption">Номинальный ток, А:</div>
+								<div class="val">5(VBUS)max; 1.25(GND); 0.25(остальные)</div>
+							</div>
+							<div class="item">
+								<div class="caption">Сопротивление изоляции, МОм, не менее:</div>
+								<div class="val">100</div>
+							</div>
+							<div class="item">
+								<div class="caption">Тип разъёма:</div>
+								<div class="val">гнездо USB 3.1 тип С</div>
+							</div>
+							<div class="item">
+								<div class="caption">Транспортная упаковка, размер мм. / кол-во:</div>
+								<div class="val">35*35*44 / 2000</div>
+							</div>
+							<div class="item">
+								<div class="caption">Ширина, мм:</div>
+								<div class="val">8.94</div>
+							</div>
+							<div class="item">
+								<div class="caption">Вес, г:</div>
+								<div class="val">0.9</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -141,7 +167,7 @@
 			<div class="container">
 				<div class="grid">
 					<div class="title">
-						<h3>Для получения окончательной цены свяжитесь с нами и приложите документацию</h3>
+						<h3>Свяжитесь с нами</h3>
 					</div>
 					<div class="form-block">
 	<form action="/" method="post">
@@ -264,6 +290,62 @@
 				<li><a href="#">Контакты</a></li>
 			</ul>
 		</nav>
+	</div>
+</div>
+	<div class="popupblock requestpopup" id="request-product">
+	<div class="inner">
+		<div class="close">
+			<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M11.9998 13.4L7.0998 18.3C6.91647 18.4834 6.68314 18.575 6.3998 18.575C6.11647 18.575 5.88314 18.4834 5.6998 18.3C5.51647 18.1167 5.4248 17.8834 5.4248 17.6C5.4248 17.3167 5.51647 17.0834 5.6998 16.9L10.5998 12L5.6998 7.10005C5.51647 6.91672 5.4248 6.68338 5.4248 6.40005C5.4248 6.11672 5.51647 5.88338 5.6998 5.70005C5.88314 5.51672 6.11647 5.42505 6.3998 5.42505C6.68314 5.42505 6.91647 5.51672 7.0998 5.70005L11.9998 10.6L16.8998 5.70005C17.0831 5.51672 17.3165 5.42505 17.5998 5.42505C17.8831 5.42505 18.1165 5.51672 18.2998 5.70005C18.4831 5.88338 18.5748 6.11672 18.5748 6.40005C18.5748 6.68338 18.4831 6.91672 18.2998 7.10005L13.3998 12L18.2998 16.9C18.4831 17.0834 18.5748 17.3167 18.5748 17.6C18.5748 17.8834 18.4831 18.1167 18.2998 18.3C18.1165 18.4834 17.8831 18.575 17.5998 18.575C17.3165 18.575 17.0831 18.4834 16.8998 18.3L11.9998 13.4Z" fill="#231F20"/>
+			</svg>
+		</div>
+		<div class="request-form-block">
+			<div class="title">
+				<h3>Запрос на товар</h3>
+			</div>
+			<div class="product-info">
+				<div class="name">543630289, ВЧ-разъем</div>
+				<div class="price">230 ₽</div>
+			</div>
+			<div class="form-block">
+				<form action="" method="post">
+					<div class="form-inner">
+						<div class="form-field">
+							<div class="field"><input type="name" placeholder="Имя" required="required"></div>
+						</div>
+						<div class="form-field">
+							<div class="field"><input type="tel" placeholder="Телефон" required="required"></div>
+						</div>
+						<div class="form-field">
+							<div class="field"><input type="email" placeholder="Почта" required="required"></div>
+						</div>
+						<div class="check-field">
+							<label class="checkbox">
+								<input type="checkbox" name="policy">
+								<span class="check"></span>
+								<span class="label">Я соглашаюсь с условиями хранения и обработки персональных данных</span>
+							</label>
+						</div>
+						<div class="btn-block">
+							<div class="quantity-block">
+								<div class="sign minus">
+									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M19.001 12.998H5.00098V10.998H19.001V12.998Z" fill="white"/>
+									</svg>
+								</div>
+								<input type="text" class="number" value="1" class="quantity">
+								<div class="sign plus">
+									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M19 12.998H13V18.998H11V12.998H5V10.998H11V4.99805H13V10.998H19V12.998Z" fill="white"/>
+									</svg>
+								</div>
+							</div>
+							<button type="submit" class="btn">Отправить</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>
 </div>
 	<script src="js/libs.min.js"></script>
