--- a/wp-content/themes/titan/assets/css/cf7-custom.css
+++ b/wp-content/themes/titan/assets/css/cf7-custom.css
@@ -124,3 +124,12 @@ label.checkbox .check.checked {
 .wpcf7-spinner {
 	display: none;
 }
+
+/* Скрываем screen-reader блок валидации CF7 */
+.wpcf7 .screen-reader-response {
+	position: absolute;
+	width: 0;
+	height: 0;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+}
