edit input placeholder

--- a/layout/app/forms.html
+++ b/layout/app/forms.html
@@ -212,7 +212,7 @@
                                 <input type="tel" name="tel" placeholder="Телефон" required> 
                                 
                                 <input type="text" name="inn" placeholder="ИНН Организации или ИП" required> 
-                                <input type="text" name="organization" placeholder="ТелНаименование организацииефон" required> 
+                                <input type="text" name="organization" placeholder="Наименование организации" required> 
 
                                 <label class="password"> 
                                     <input type="password" placeholder="Пароль" minlength="6" maxlength="24" required> 
