edit input placeholder

--- a/layout/app/forms.html
+++ b/layout/app/forms.html
@@ -194,7 +194,7 @@
                                 <label class="checkbox">
                                     <input type="checkbox" name="check">
                                     <span class="check"></span>
-                                    <span class="label">Я соглашаюсь с условиями хранения и обработки <a href="#">персональных данных</a></span>
+                                    <span class="label">Я соглашаюсь с условиями хранения и обработки персональных данных" везде нужно переделать на: Согласен на обработку персональных данных согласно ФЗ от 27 июля 2006 г. № 152-ФЗ "О персональных данных"</span>
                                 </label>
 
                                 <input type="submit" value="Зарегистрироваться" disabled>
@@ -233,7 +233,7 @@
                                 <label class="checkbox">
                                     <input type="checkbox" name="check">
                                     <span class="check"></span>
-                                    <span class="label">Я соглашаюсь с условиями хранения и обработки <a href="#">персональных данных</a></span>
+                                    <span class="label">Я соглашаюсь с условиями хранения и обработки персональных данных" везде нужно переделать на: Согласен на обработку персональных данных согласно ФЗ от 27 июля 2006 г. № 152-ФЗ "О персональных данных"</span>
                                 </label>
 
                                 <input type="submit" value="Зарегистрироваться" disabled>
