--- a/layout/app/pages/index.html
+++ b/layout/app/pages/index.html
@@ -37,6 +37,7 @@
 				<li><a href="product-page.html">Деталка товара</a></li>
 				<li><a href="contacts.html">Контакты</a></li>
 				<li><a href="cart.html">Корзина</a></li>
+				<li><a href="account.html">Личный кабинет</a></li>
 			</ul>
 		</div>
 	</div>
