--- a/layout/app/scss/main.scss
+++ b/layout/app/scss/main.scss
@@ -1203,6 +1203,23 @@ h4 {
   .cart-table {
     margin-top: 24px;
   }
+  .cart-auth-notice {
+    margin-top: 24px;
+    padding: 16px;
+    border: 1px solid var(--red);
+    border-radius: 10px;
+    background: rgba(226, 0, 0, 0.1);
+    text-align: center;
+    font-size: 14px;
+    line-height: 24px;
+    p {
+      margin: 0;
+    }
+    a {
+      color: var(--black);
+      text-decoration: underline;
+    }
+  }
   .total-container {
     margin-top: 24px;
     display: flex;
