--- a/layout/app/scss/main.scss
+++ b/layout/app/scss/main.scss
@@ -371,6 +371,7 @@ header {
       border-radius: 50%;
       border: none;
       background-color: var(--gray2);
+      position: relative;
       svg {
         path {
           transition: all 0.3s;
@@ -383,6 +384,25 @@ header {
             fill: #ffffff;
           }
         }
+      }
+    }
+    .cart-count {
+      position: absolute;
+      top: -2px;
+      right: -2px;
+      width: 20px;
+      height: 20px;
+      background-color: var(--black);
+      border: 2px solid #ffffff;
+      border-radius: 50%;
+      color: #ffffff;
+      font-size: 12px;
+      font-weight: 600;
+      line-height: 16px;
+      text-align: center;
+      pointer-events: none;
+      &.hidden {
+        display: none;
       }
     }
   }
